--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <style>
     /* CSS code for button */
     body {
-      background-image: url({static,'project.png'});
+      background-image: url({E:\Crisp\Heart\static\'project.png'});
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
